Limit role amount in comments to stop overflows

--- a/global/css/comments.css
+++ b/global/css/comments.css
@@ -115,7 +115,7 @@
     border-radius: 0px 0px 8px 8px;
     display: flex;
 }
-.comments__comment-top {
+.comments__comment-top-text {
     
     overflow: hidden;
 }
